Fixed overflow bug and play again bug.

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   font-family: "Ubuntu", sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   touch-action: manipulation;
 }
 
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100vh;
+  height: 94vh;
 }
 
 main h2 {
